Notification collapsing to fixed

--- a/Mobile App/Directory-App/src/app/side-menu/notifications/notifications.page.scss
+++ b/Mobile App/Directory-App/src/app/side-menu/notifications/notifications.page.scss
@@ -83,8 +83,3 @@
 .sample-description {
   transition: 0.5s linear !important;
 }
-.vetical-align{
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
